# CAV-MIR

./: .env.sample  .gitignore  LICENSE  README.md  calculate_embeddings.ipynb  evaluate_tcav.ipynb
cavmir/: pyproject.toml  setup.cfg
data/: create_datasets.ipynb  supplementary_dataset.txt
embedding_calculation/: calculate_mert_embeddings.ipynb  calculate_muq_embeddings.ipynb  calculate_whisper_embeddings.ipynb
evaluation/: evaluate_tcav.ipynb  tcav_classifier.py
train_scripts/: train_cavs.ipynb
train_scripts/mert/gender/: train_mert_gender_female.ipynb  train_mert_gender_male.ipynb
train_scripts/mert/language/: train_mert_language_de.ipynb  train_mert_language_en.ipynb  train_mert_language_fr.ipynb  train_mert_language_it.ipynb  train_mert_language_ja.ipynb  train_mert_language_pt.ipynb
train_scripts/mert/singer_age/: train_mert_singer_age_decade_10.ipynb  train_mert_singer_age_decade_40.ipynb  train_mert_singer_age_decade_80.ipynb
train_scripts/mert_v1_95m/gender/: train_mert_gender_female.ipynb  train_mert_gender_male.ipynb
train_scripts/mert_v1_95m/language/: train_mert_language_de.ipynb  train_mert_language_en.ipynb  train_mert_language_es.ipynb  train_mert_language_fr.ipynb  train_mert_language_it.ipynb  train_mert_language_ja.ipynb  train_mert_language_pt.ipynb
train_scripts/mert_v1_95m/singer_age/: train_mert_singer_age_decade_10.ipynb  train_mert_singer_age_decade_20.ipynb  train_mert_singer_age_decade_30.ipynb  train_mert_singer_age_decade_40.ipynb  train_mert_singer_age_decade_50.ipynb  train_mert_singer_age_decade_60.ipynb  (+2 more)
(+555 files in other folders)
