[metadata]
name = cavmir
version = 0.1.0
description = Concept Activation Vectors in Music Information Retrieval
long_description = file: README.md
long_description_content_type = text/markdown
author = Arne Kuhle
author_email = arne@cynite.ai
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    torch==2.6.0 
